[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# Add this section
[tool.setuptools]
include-package-data = true
package-dir = {"" = "."}
packages = [
    "memoraith",
    "memoraith.analysis",
    "memoraith.data_collection",
    "memoraith.integration",
    "memoraith.reporting",
    "memoraith.templates",
    "memoraith.visualization"
]

# Ensure files are read as UTF-8
[tool.setuptools.package-data]
"memoraith.templates" = ["*.html"]

# Add explicit encoding configuration
[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310']